# sf-position-integrity-checker

./: .env.example  .gitignore  CLAUDE.md  README.md  api_client.py  config.py  conftest.py  database.py  db_inspector.py  fetchers.py  index.html  main.py  mcp_server.py  pyproject.toml  remediation.py  reporters.py  requirements.txt  robots.txt  run_mcp_server.sh  simulator.py  test_auth_basic.py  test_odata_escape.py  test_remediation.py  test_schema.py  test_simulator.py  test_validators.py  validators.py  web_ui.py
.github/workflows/: ci.yml  schema-tests.yml
auth/: __init__.py  basic.py  oauth2.py
config/: foundation.yaml  rules.yaml
docs/: oauth2_setup.md
templates/: index.html
