[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-position-integrity-checker"
version = "0.1.0"
description = "Validates SAP SuccessFactors Position object data integrity via OData v2 checks"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "openpyxl>=3.1.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "PyYAML>=6.0",
    "lxml>=4.9.0",
    "signxml>=3.2.0",
    "cryptography>=41.0.0",
    "Flask>=2.3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
sf-position-integrity-checker = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "web_ui",
    "api_client",
    "fetchers",
    "validators",
    "reporters",
    "database",
    "config",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
